fixed background image not showing in vercel deployment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -442,7 +442,7 @@ color: inherit;
 } */
 
 .bg-engagement-3 {
-  background-image: url("/assets/ADP_1616.jpg");
+  background-image: url("/assets/adp_1616.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -471,7 +471,7 @@ color: inherit;
 } */
 
 .bg-engagement-7 {
-  background-image: url("/assets/ADP_1855.jpg");
+  background-image: url("/assets/adp_1855.jpg");
   background-repeat: no-repeat;
   background-attachment: local;
   background-size: contain;
@@ -512,7 +512,7 @@ color: inherit;
 @media (max-width: 640px) {
   .bg-engagement-3 {
     background-size: cover;
-    background-position: center top; /* no cutoff on phones */
+    background-position: center top; 
   }
 }
 
